# nova.core

./: .gitignore  README.md
.github/: CONTRIBUTING.md
.github/workflows/: release.yml  version.yml  version_check.yml
nova/core/: CHANGELOG.md  galaxy.yml
nova/core/meta/: runtime.yml
nova/core/plugins/filter/: addresses.py  getIP.py
nova/core/plugins/inventory/: providentia_v3.py
nova/core/requirements/: pyproject.toml  requirements.yml
nova/core/roles/accounts/: README.md
nova/core/roles/accounts/defaults/: main.yml
nova/core/roles/accounts/tasks/: create_accounts_lists.yml  create_domain_groups.yml  create_domain_ous.yml  esxi_create.yml  fortios_create.yml  freebsd.yml  ios.yml  linux.yml  macos.yml  macos_create.yml  macos_remove.yml  main.yml  network_devices.yml  opnsense.yml  panos.yml  pfsense.yml  routeros.yml  unix.yml  unix_create.yml  unix_create_samba.yml  unix_remove.yml  vyos.yml  windows.yml  windows_create.yml  windows_remove.yml
nova/core/roles/accounts/templates/: Create-OUs.ps1  Create-UserOUs.ps1  creating_samba_ad_objects.sh  generate_ou_list.yml  get_samba_user_dn.sh  pfsense_wheel_users.sh
nova/core/roles/caddy/: README.md
nova/core/roles/caddy/defaults/: main.yml
nova/core/roles/caddy/tasks/: caddy_api.yml  caddy_template.yml  caddyfile_with_vars.yml  install.yml  main.yml
nova/core/roles/caddy/templates/: Caddyfile_jinja  caddy.yml  caddy.yml.j2  docker-compose.yml
nova/core/roles/cleanup/: README.md
nova/core/roles/cleanup/defaults/: main.yml
nova/core/roles/cleanup/tasks/: linux.yml  main.yml  routeros.yml  vyos.yml  windows.yml
nova/core/roles/cleanup/templates/: Windows-Cleanup.ps1
nova/core/roles/configure_networking/: README.md
nova/core/roles/configure_networking/defaults/: main.yml
nova/core/roles/configure_networking/handlers/: main.yml
nova/core/roles/configure_networking/tasks/: main.yml
nova/core/roles/configure_networking/templates/: 70-persistent-net.rules  Configure-Network.ps1  config.boot  config.boot_legacy  config.wipe  esx.sh  interfaces.j2  macos.sh  mactab  netplan.yml  networkd.link  networkd.link.simple  networkd.link.simple.j2  networkd.network  networkd.network.simple  networkd.network.simple.j2  nmcli.sh  opnsense.yml  panos.yml  pfsense.yml  proxmox.sh  rc.conf  rc.local  resolv.conf  resolved.conf  routeros.yml  vyos-wipe.sh
nova/core/roles/configure_networking_with_checks/: README.md
nova/core/roles/configure_networking_with_checks/defaults/: main.yml
nova/core/roles/configure_networking_with_checks/templates/: Configure-Network.ps1  config.boot  netplan.yml  nmcli.sh  rc.local  resolv.conf.j2  resolved.conf.j2  routeros.yml
nova/core/roles/configure_package_mirrors/: README.md
nova/core/roles/configure_package_mirrors/defaults/: main.yml
nova/core/roles/configure_package_mirrors/tasks/: choco.yml  debian.yml  focal.yml  jammy.yml  kali.yml  main.yml  parrot.yml  ubuntu.yml
nova/core/roles/configure_package_mirrors/templates/: debian-bookworm.list  debian-bullseye.list  debian-trixie.list  focal.list  jammy.list  kali-sources.list  kali.list  parrot-sources-1.list  parrot-sources-2.list  ubuntu-sources.list  ubuntu.sources
nova/core/roles/connect/: README.md
nova/core/roles/connect/defaults/: main.yml
nova/core/roles/connect/tasks/: main.yml  ssh.yml
nova/core/roles/connection/: README.md
nova/core/roles/connection/defaults/: main.yml
nova/core/roles/connection/tasks/: aws.yml  azure.yml  external.yml  laptop.yml  linode.yml  main.yml  my_host.yml  openstack.yml  proxmox.yml  vmware_workstation.yml  vsphere.yml
nova/core/roles/create/tasks/: main.yml
nova/core/roles/customization/: README.md
nova/core/roles/customization/defaults/: main.yml
nova/core/roles/customization/tasks/: main.yml
nova/core/roles/customization_post_vm_role/: README.md
nova/core/roles/customization_post_vm_role/defaults/: main.yml
nova/core/roles/customization_post_vm_role/tasks/: main.yml
nova/core/roles/customization_pre_role/: README.md
nova/core/roles/customization_pre_role/defaults/: main.yml
nova/core/roles/customization_pre_role/tasks/: main.yml
nova/core/roles/customization_pre_vm_role/: README.md
nova/core/roles/customization_pre_vm_role/defaults/: main.yml
nova/core/roles/customization_pre_vm_role/tasks/: main.yml
nova/core/roles/customization_single_role/: README.md
nova/core/roles/customization_single_role/defaults/: main.yml
nova/core/roles/customization_single_role/tasks/: main.yml
nova/core/roles/deploy_vars/: README.md
nova/core/roles/docker/: README.md
nova/core/roles/expo/: README.md
nova/core/roles/finalize/: README.md
nova/core/roles/firewall/: README.md
nova/core/roles/frr/: README.md
nova/core/roles/gather_facts/: README.md
nova/core/roles/get_ip/: README.md
nova/core/roles/gitlab/: README.md
nova/core/roles/gitlab_runner/: README.md
nova/core/roles/join_domain/: README.md
nova/core/roles/keycloak/: README.md
nova/core/roles/linux_xrdp_keyboard/: README.md
nova/core/roles/linux_xrdp_server/: README.md
nova/core/roles/machine_operations/: README.md
nova/core/roles/monolith/: README.md
nova/core/roles/nexus/: README.md
nova/core/roles/os_configuration/: README.md
nova/core/roles/outline/: README.md
nova/core/roles/powerstate/: README.md
nova/core/roles/providentia/: README.md
nova/core/roles/rename_vm/: README.md
nova/core/roles/role_metadata_post/: README.md
nova/core/roles/samba/: README.md
nova/core/roles/save_secrets/: README.md
nova/core/roles/secrets_to_vault/: README.md
nova/core/roles/snapshots/: README.md
nova/core/roles/template_os_configuration/: README.md
nova/core/roles/trusted_certificates/: README.md
nova/core/roles/tuoni/: README.md
nova/core/roles/updates/: README.md
nova/core/roles/vault/: README.md
nova/core/roles/vcenter_vmtools_policy/: README.md
nova/core/roles/win_configure_rdp/: README.md
nova/core/roles/win_dc_post_reboot_check/: README.md
nova/core/roles/win_sysprep/: README.md
nova/core/roles/win_test_pending_reboot/: README.md
(+462 files in other folders)
