[tool.poetry]
name = "nova"
version = "1.0.0"
description = "Required libraries for running CCDCoE projects and Catapult"
authors = ["CCDCOE <techadmin@ccdcoe.org> and Clarified Security <catapult@clarifiedsecurity.com>"]

[tool.poetry.dependencies]
aiohttp = "*"
ansible-core = "2.16.0"
ansible-lint = { version = "*", markers = "platform_system != 'Windows'" } # https://github.com/python-poetry/poetry/issues/7112#issuecomment-1329385572
ansible-pylibssh = "*"
ansible-specdoc = "*"
boto3 = "*"
botocore = "^1.33" # Versioned because of https://github.com/python-poetry/poetry/issues/2094
cryptography = "*"
dnspython = "*"
hvac = "*"
jinja2 = "*"
jmespath = "*"
linode-api4 = "*"
lxml = "*"
netaddr = "*"
oauthlib = "*"
packaging = "*"
paramiko = "*"
passlib = "*"
polling = "*"
prettytable = "*"
psycopg2-binary = "*"
pykeepass = "*"
pyopenssl = "*"
python = "3.11.6"
pyvmomi = "*"
pywinrm = "*"
redis = "*"
requests = "*"
requests-credssp = "*"
requests-oauthlib = "*"
scp = "*"
yq = "*"

# Azure https://raw.githubusercontent.com/ansible-collections/azure/dev/requirements-azure.txt
azure-cli-core = "^2.42.0"
azure-common = "^1.1.11"
azure-containerregistry = "^1.0.0"
azure-graphrbac = "^0.61.1"
azure-identity = "^1.7.0"
azure-keyvault = "^1.1.0"
azure-mgmt-apimanagement = "^0.2.0"
azure-mgmt-authorization = "^2.0.0"
azure-mgmt-automation = "^1.0.0"
azure-mgmt-batch = "^5.0.1"
azure-mgmt-cdn = "^11.0.0"
azure-mgmt-compute = "^26.1.0"
azure-mgmt-containerinstance = "^9.0.0"
azure-mgmt-containerregistry = "^9.1.0"
azure-mgmt-containerservice = "^20.0.0"
azure-mgmt-core = "^1.3.0"
azure-mgmt-cosmosdb = "^6.4.0"
azure-mgmt-datafactory = "^2.0.0"
azure-mgmt-datalake-store = "^0"
azure-mgmt-devtestlabs = "^3.0.0"
azure-mgmt-dns = "^8.0.0"
azure-mgmt-eventhub = "^10.1.0"
azure-mgmt-hdinsight = "^9.0.0"
azure-mgmt-iothub = "^2.2.0"
azure-mgmt-keyvault = "^10.0.0"
azure-mgmt-loganalytics = "^12.0.0"
azure-mgmt-managedservices = "^6.0.0"
azure-mgmt-managementgroups = "^0.2.0"
azure-mgmt-marketplaceordering = "^0.1.0"
azure-mgmt-monitor = "^3.0.0"
azure-mgmt-network = "^19.1.0"
azure-mgmt-notificationhubs = "^7.0.0"
azure-mgmt-nspkg = "^2.0.0"
azure-mgmt-privatedns = "^1.0.0"
azure-mgmt-rdbms = "^10.0.0"
azure-mgmt-recoveryservices = "^2.0.0"
azure-mgmt-recoveryservicesbackup = "^3.0.0"
azure-mgmt-redis = "^13.0.0"
azure-mgmt-resource = "^10.2.0"
azure-mgmt-search = "^8.0.0"
azure-mgmt-servicebus = "^7.1.0"
azure-mgmt-sql = "^3.0.1"
azure-mgmt-storage = "^19.0.0"
azure-mgmt-trafficmanager = "^1.0.0b1"
azure-mgmt-web = "^6.1.0"
azure-nspkg = "^2.0.0"
azure-storage-blob = "12.14.0" # 12.14.1 is broken
msrest = "^0.7.1"
msrestazure = "^0.6.4"
xmltodict = "^0.13"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
