[tool.poetry]
name = "nova"
version = "1.0.0"
description = "Required libraries for running CCDCoE projects and Catapult"
authors = ["CCDCOE <techadmin@ccdcoe.org> and Clarified Security <catapult@clarifiedsecurity.com>"]

[tool.poetry.dependencies]
aiohttp = "*"
ansible-core = "2.16.0"
ansible-lint = { version = "*", markers = "platform_system != 'Windows'" } # https://github.com/python-poetry/poetry/issues/7112#issuecomment-1329385572
ansible-pylibssh = "*"
ansible-specdoc = "*"
boto3 = "*"
botocore = "^1.33" # Versioned because of https://github.com/python-poetry/poetry/issues/2094
cryptography = "*"
dnspython = "*"
dpath = "*"
hvac = "*"
jinja2 = "*"
jmespath = "*"
linode-api4 = "*"
lxml = "*"
netaddr = "*"
oauthlib = "*"
packaging = "*"
pan-os-python = "*"
pan-python = "*"
pandevice = "*"
panos-upgrade-assurance = "*"
paramiko = "*"
passlib = "*"
polling = "*"
prettytable = "*"
psycopg2-binary = "*"
pykeepass = "*"
pyopenssl = "*"
python = "3.11.7"
pyvmomi = "*"
pywinrm = "*"
redis = "*"
requests = "*"
requests-credssp = "*"
requests-oauthlib = "*"
scp = "*"
yq = "*"

# Azure https://raw.githubusercontent.com/ansible-collections/azure/dev/requirements-azure.txt
azure-cli-core = "*"
azure-common = "*"
azure-containerregistry = "*"
azure-core = "*"
azure-identity = "*"
azure-keyvault = "*"
azure-mgmt-apimanagement = "*"
azure-mgmt-authorization = "*"
azure-mgmt-automation = "*"
azure-mgmt-batch = "*"
azure-mgmt-cdn = "*"
azure-mgmt-compute = "*"
azure-mgmt-containerinstance = "*"
azure-mgmt-containerregistry = "*"
azure-mgmt-containerservice = "*"
azure-mgmt-core = "*"
azure-mgmt-cosmosdb = "*"
azure-mgmt-datafactory = "*"
azure-mgmt-datalake-store = "*"
azure-mgmt-devtestlabs = "*"
azure-mgmt-dns = "*"
azure-mgmt-eventhub = "*"
azure-mgmt-hdinsight = "*"
azure-mgmt-iothub = "*"
azure-mgmt-keyvault = "*"
azure-mgmt-loganalytics = "*"
azure-mgmt-managedservices = "*"
azure-mgmt-managementgroups = "*"
azure-mgmt-marketplaceordering = "*"
azure-mgmt-monitor = "*"
azure-mgmt-network = "*"
azure-mgmt-notificationhubs = "*"
azure-mgmt-nspkg = "*"
azure-mgmt-privatedns = "*"
azure-mgmt-rdbms = "*"
azure-mgmt-recoveryservices = "*"
azure-mgmt-recoveryservicesbackup = "*"
azure-mgmt-redis = "*"
azure-mgmt-resource = "*"
azure-mgmt-search = "*"
azure-mgmt-servicebus = "*"
azure-mgmt-sql = "*"
azure-mgmt-storage = "*"
azure-mgmt-trafficmanager = "*"
azure-mgmt-web = "*"
azure-nspkg = "*"
azure-storage-blob = "*"
msgraph-sdk = "*"
xmltodict = "*"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
