[tool.poetry]
name = "nova"
version = "2.0.0"
description = "Required libraries for running CCDCoE projects"
authors = ["CCDCOE <techadmin@ccdcoe.org>"]

[tool.poetry.dependencies]
aiohttp = "*"
ansible-core = "2.18.0"
ansible-lint = "*"
ansible-pylibssh = "*"
ansible-specdoc = "*"
boto3 = "*"
botocore = "*"
cryptography = "*"
dnspython = "*"
dpath = "*"
hvac = "*"
jinja2 = "*"
jmespath = "*"
linode-api4 = "*"
lxml = "*"
netaddr = "*"
oauthlib = "*"
packaging = "*"
pan-os-python = "*"
pan-python = "*"
pandevice = "*"
panos-upgrade-assurance = "*"
paramiko = "*"
passlib = "*"
polling = "*"
prettytable = "*"
psycopg2-binary = "*"
pyopenssl = "*"
python = "3.11.9"
pyvmomi = "*"
pywinrm = "*"
redis = "*"
requests = "*"
requests-credssp = "*"
requests-oauthlib = "*"
scp = "*"
yq = "*"

# Azure https://raw.githubusercontent.com/ansible-collections/azure/dev/requirements-azure.txt
azure-cli-core = "*"
azure-common = "*"
azure-containerregistry = "*"
azure-core = "*"
azure-identity = "*"
azure-keyvault = "*"
azure-mgmt-apimanagement = "*"
azure-mgmt-authorization = "*"
azure-mgmt-automation = "*"
azure-mgmt-batch = "*"
azure-mgmt-cdn = "*"
azure-mgmt-compute = "*"
azure-mgmt-containerinstance = "*"
azure-mgmt-containerregistry = "*"
azure-mgmt-containerservice = "*"
azure-mgmt-core = "*"
azure-mgmt-cosmosdb = "*"
azure-mgmt-datafactory = "*"
azure-mgmt-datalake-store = "*"
azure-mgmt-devtestlabs = "*"
azure-mgmt-dns = "*"
azure-mgmt-eventhub = "*"
azure-mgmt-hdinsight = "*"
azure-mgmt-iothub = "*"
azure-mgmt-keyvault = "*"
azure-mgmt-loganalytics = "*"
azure-mgmt-managedservices = "*"
azure-mgmt-managementgroups = "*"
azure-mgmt-marketplaceordering = "*"
azure-mgmt-monitor = "*"
azure-mgmt-network = "*"
azure-mgmt-notificationhubs = "*"
azure-mgmt-nspkg = "*"
azure-mgmt-privatedns = "*"
azure-mgmt-rdbms = "*"
azure-mgmt-recoveryservices = "*"
azure-mgmt-recoveryservicesbackup = "*"
azure-mgmt-redis = "*"
azure-mgmt-resource = "*"
azure-mgmt-search = "*"
azure-mgmt-servicebus = "*"
azure-mgmt-sql = "*"
azure-mgmt-storage = "*"
azure-mgmt-trafficmanager = "*"
azure-mgmt-web = "*"
azure-nspkg = "*"
azure-storage-blob = "*"
msgraph-sdk = "*"
xmltodict = "*"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
